Add entry labels.

--- a/demos/wm_login.html
+++ b/demos/wm_login.html
@@ -3,9 +3,21 @@
 
 <form action="/wm_login" method="POST">
 
-<p><input type="text" name="WM_POP_SERVER">
-<p><input type="text" name="WM_USER_NAME">
-<p><input type="password" name="WM_PASSWORD">
+<table>
+
+<tr>
+<td>POP Server
+<td><input type="text" name="WM_POP_SERVER">
+
+<tr>
+<td>User
+<td><input type="text" name="WM_USER_NAME">
+
+<tr>
+<td>Password
+<td><input type="password" name="WM_PASSWORD">
+
+</table>
 
 <p><input type="submit" name="enter" value=" Login ">
 
