--- a/demos/wm_login.html
+++ b/demos/wm_login.html
@@ -1,9 +1,18 @@
+<html> 
+<head> 
+<title>AWS Web Mail Demo</title>
+</head>
 
+<body>
 <p>Simple Web Mail, POP Server Login
 
 <form action="/wm_login" method="POST">
 
-<table>
+<table width="80%">
+
+<tr>
+<td>SMTP Server
+<td><input type="text" name="WM_SMTP_SERVER">
 
 <tr>
 <td>POP Server
@@ -22,3 +31,5 @@
 <p><input type="submit" name="enter" value=" Login ">
 
 </form>
+</body>
+</html>
