Add 15 to the eight offset for the tab with big font.

--- a/demos/we_test_notebook.html
+++ b/demos/we_test_notebook.html
@@ -2,7 +2,7 @@
 <html>
    <head>
 @@INCLUDE@@ ../web_elements/notebook/notebook.thtml Tabs currentPage TabContents page1 white #ccc
-@@INCLUDE@@ ../web_elements/notebook/notebook.thtml Tabs2 currentPage2 TabContents2 pg1 #aaa white
+@@INCLUDE@@ ../web_elements/notebook/notebook.thtml Tabs2 currentPage2 TabContents2 pg1 #aaa white 15
 <style>
 .TabContents   { background: white; }
 .TabContents2  { background: #aaa; }
