Add support for the Ajax demo.

--- a/demos/we_library.html
+++ b/demos/we_library.html
@@ -22,21 +22,34 @@ li { margin-top: 20px; }
 
   <h2>Lists</h2>
   <ul>
-    <li><a href="we_test_notebook.html">Notebooks</a><br>
-        How to implement a notebook with style sheets and javascript<br>
-        See <tt><a href="/notebook/notebook.thtml">notebook.thtml</a></tt> for more information.</li>
+    <li><a href="we_test_notebook.html">Notebooks</a>
+        <p>How to implement a notebook with style sheets and javascript<br>
+        See <tt><a href="/notebook/notebook.thtml">notebook.thtml</a></tt> for
+        more information.</p></li>
 
     <li><a href="we_test_menu_css.html">CSS Menus</a></br>
-        How to implement pure CSS menus, no javascript</br>
-        See <tt><a href="/menu_css/menu.tcss">menu.tcss</a></tt> for more information.</li>
+        <p>How to implement pure CSS menus, no javascript<
+        See <tt><a href="/menu_css/menu.tcss">menu.tcss</a></tt> for more
+        information.</p></li>
   </ul>
 
   <h2>Boxes</h2>
   <ul>
     <li><a href="we_test_rounded_boxes.html">Rounded boxes</a></br>
-        How to implement rounded boxes to display list of choices</br>
-        See <tt><a href="/rounded_boxes/rounded_boxes.tcss">rounded_boxes.tcss</a></tt> for more information.</li>
+        <p>How to implement rounded boxes to display list of choices<
+        See <tt>
+        <a href="/rounded_boxes/rounded_boxes.tcss">rounded_boxes.tcss</a>
+        </tt> for more information.</p></li>
   </ul>
 
+  <h2>Ajax</h2>
+  <ul>
+    <li><a href="we_test_ajax.html">Ajax demo</a></br>
+        <p>Ajax stand for <i>Asynchronous JavaScript language and XML</i>.
+        It is a set of development technique for creating interactive web
+        applications. Properly combined it is possible to build Web based
+        applications that have an ergonomy very close to standard ones.</p>
+        </li>
+  </ul>
   </body>
 </html>
