Fix incomplete closing tags. Minor rewording.

--- a/demos/we_library.html
+++ b/demos/we_library.html
@@ -28,7 +28,7 @@ li { margin-top: 20px; }
         more information.</p></li>
 
     <li><a href="we_test_menu_css.html">CSS Menus</a></br>
-        <p>How to implement pure CSS menus, no javascript<
+        <p>How to implement pure CSS menus (no javascript)</br>
         See <tt><a href="/menu_css/menu.tcss">menu.tcss</a></tt> for more
         information.</p></li>
   </ul>
@@ -36,7 +36,7 @@ li { margin-top: 20px; }
   <h2>Boxes</h2>
   <ul>
     <li><a href="we_test_rounded_boxes.html">Rounded boxes</a></br>
-        <p>How to implement rounded boxes to display list of choices<
+        <p>How to implement rounded boxes to display list of choices</br>
         See <tt>
         <a href="/rounded_boxes/rounded_boxes.tcss">rounded_boxes.tcss</a>
         </tt> for more information.</p></li>
@@ -46,9 +46,9 @@ li { margin-top: 20px; }
   <ul>
     <li><a href="we_test_ajax.html">Ajax demo</a></br>
         <p>Ajax stand for <i>Asynchronous JavaScript language and XML</i>.
-        It is a set of development technique for creating interactive web
+        It is a set of development techniques for creating interactive web
         applications. Properly combined it is possible to build Web based
-        applications that have an ergonomy very close to standard ones.</p>
+        applications that have an ergonomy very close to desktop ones.</p>
         </li>
   </ul>
   </body>
