When selecting a size or a color, make the corresponding text appear with the selected siez and color.

--- a/demos/we_test_ajax.html
+++ b/demos/we_test_ajax.html
@@ -46,7 +46,24 @@ html>div, #page5         { height: 30em; }
                  background-color: #f5f691; padding: 10px;
                  font-size: small; font-family: courier;
                }
-
+.green         {
+                 color: #00FF00;
+               }
+.blue          {
+                 color: #0000FF;
+               }
+.red           {
+                 color: #FF0000;
+               }
+.small         {
+                 font-size: small;
+               }
+.medium        {
+                 font-size: medium;
+               }
+.large         {
+                 font-size: large;
+               }
 </style>
    </head>
 
