Fix some typos.

--- a/demos/we_test_ajax.html
+++ b/demos/we_test_ajax.html
@@ -95,7 +95,7 @@ html>div, #page5         { height: 30em; }
 
       <div class="Demo">
       <p>Click on the button...</p>
-      <p><input id="clickme" type="button" value="Clik Me"></p>
+      <p><input id="clickme" type="button" value="Click Me"></p>
       </div>
 
       <div Class="Result" id="placeholder">... result here ...
@@ -104,7 +104,7 @@ html>div, #page5         { height: 30em; }
 
       <div class="Code">
       Click on the button...
-      <br>&lt;input id="<strong>clickme</strong>" type="button" value="Clik Me"&gt;
+      <br>&lt;input id="<strong>clickme</strong>" type="button" value="Click Me"&gt;
       <br>&lt;div id="<strong>placeholder</strong>"&gt;... result here ...&lt;/div&gt;
       <br>@@INCLUDE@@ aws_action_replace.tjs onclick <strong>clickme</strong> <strong>placeholder</strong>
       </div>
@@ -118,7 +118,7 @@ html>div, #page5         { height: 30em; }
       <p>Enter some text in the following entry:
       <p><input id="field" type="text" value="enter some text here">
       <p>Click on the button...</p>
-      <p><input id="data" type="button" value="Clik Me"></p>
+      <p><input id="data" type="button" value="Click Me"></p>
       <p>Clear actions:
       <p><input id="cdata" type="button" value="Clear Field">
       <p><input id="cplaceh" type="button" value="Clear Result">
@@ -134,7 +134,7 @@ html>div, #page5         { height: 30em; }
       <br>Enter some text in the following entry:
       <br>&lt;input id="<strong>field</strong>" type="text" value="enter some text here"&gt;
       <br>Click on the button...
-      <br>&lt;input id="<strong>data</strong>" type="button" value="Clik Me"&gt;
+      <br>&lt;input id="<strong>data</strong>" type="button" value="Click Me"&gt;
       <br>Clear the entry:
       <br>&lt;input id="<strong>cdata</strong>" type="button" value="Clear"&gt;
       <br>&lt;div id="<strong>placeholder</strong>"&gt;... result here ...&lt;/div&gt;
