Add a new button to test the chaining of URLs.

--- a/demos/we_test_ajax.html
+++ b/demos/we_test_ajax.html
@@ -285,11 +285,14 @@ html>div, #page6         { height: 23em; }
          <input id="xml2" type="button" name="action2" value="Clear Widgets">
          <br><br>
          <input id="xml3" type="button" name="action3" value="Mixed Fill/Clear"
+         <br><br>
+         <input id="xml4" type="button" name="action4" value="Action + Call URL"
          <br>
       </fieldset>
       @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml1)
       @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml2)
       @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml3)
+      @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml4)
       </div>
 
       <div Class="XML_Result">
