--- a/demos/we_test_ajax.html
+++ b/demos/we_test_ajax.html
@@ -6,7 +6,7 @@
 @@INCLUDE@@ ../web_elements/notebook/notebook.thtml Tabs currentPage TabContents page1
 <style>
 h1             { font-size: large; text-align: center; }
-.TabContents   { background: white; height: 20em;}
+.TabContents   { background: white; height: 20em }
 .TabContents2  { background: #aaa; }
 
 /* trick IE which won't understand html>div */
@@ -16,6 +16,7 @@ html>div, #page3         { height: 20em; }
 html>div, #page4         { height: 36em; }
 html>div, #page5         { height: 30em; }
 html>div, #page6         { height: 23em; }
+html>div, #page7         { height: 27em; }
 
 .Demo          { position: relative; top: 1em; width: 40%;
                  float: left;
@@ -57,6 +58,18 @@ html>div, #page6         { height: 23em; }
                  background-color: #f5f691; padding: 10px;
                  font-size: large; font-weight: bold;
                }
+.Dialog        { position: absolute; top: 4em; left: 4em;
+                 width: 30em; height: 5em; z-index: 10;
+                 background-color: #ffffff; padding: 10px;
+		 display: none; border-style: double;
+                 border-style: solid;
+                 border-color: #ff0000;
+               }
+.Button        { position: relative; top: 2em; width: 70%;
+                 float: left; left: 10px; height: 2em;
+                 background-color: #ffffff; padding: 10px;
+                 font-size: small; font-family: courier;
+               }
 .green         {
                  color: #00FF00;
                }
@@ -75,13 +88,18 @@ html>div, #page6         { height: 23em; }
 .large         {
                  font-size: large;
                }
+
+.ulist	       {
+                 height: 8em;
+	       }
+
 </style>
    </head>
 
    <body>
       <h1>Ajax - <i>Asynchronous JavaScript language and XML</i> demos</h1>
 
-      <table width="80%" align="center">
+      <table width="90%" align="center">
       <td>
       <ul id="Tabs">
         <li id="page1" class="currentPage">
@@ -100,7 +118,10 @@ html>div, #page6         { height: 23em; }
             Complex Form</a></li>
         <li id="page6">
             <a href="#" onclick="switchTabPage_Tabs('page6')">
-            XML Based Requests</a></li>
+            XML 1</a></li>
+        <li id="page7">
+            <a href="#" onclick="switchTabPage_Tabs('page7')">
+            XML 2</a></li>
       </ul>
 
       <!-- Button -->
@@ -274,7 +295,7 @@ html>div, #page6         { height: 23em; }
       </div>
       </div>
 
-      <!-- XML Based Requests -->
+      <!-- XML Based Requests (1) -->
 
       <div class="TabContents" id="page6">
       <div class="Demo">
@@ -282,7 +303,7 @@ html>div, #page6         { height: 23em; }
          <legend>Actions</legend>
          <input id="xml1" type="button" name="action1" value="Fill Widgets">
          <br><br>
-         <input id="xml2" type="button" name="action2" value="Clear Widgets">
+         <input id="xml_clear" type="button" name="action2" value="Clear Widgets">
          <br><br>
          <input id="xml3" type="button" name="action3" value="Mixed Fill/Clear"
          <br><br>
@@ -290,7 +311,7 @@ html>div, #page6         { height: 23em; }
          <br>
       </fieldset>
       @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml1)
-      @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml2)
+      @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml_clear)
       @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml3)
       @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml4)
       </div>
@@ -319,9 +340,68 @@ html>div, #page6         { height: 23em; }
         </fieldset>
       </div>
 
+      <div Class="Dialog" id="dialog_yes_no">
+      Are you sure you want to clear everything ?
+      <p><input id="xml2" type="button" name="action1" value="Yes">
+      <input id="xml_clear_no" type="button" name="action1" value="No">
+      </div>
+      @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml2)
+      @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml_clear_no)
+
       <br><br>
       <div Class="Status" id="xml_status_bar">Click on the buttons</div>
+      </div>
+
+      <!-- XML Based Requests (2) -->
+
+      <div class="TabContents" id="page7">
+      <div class="Demo">
+
+      <p> Select some colors you like...</p>
+
+	<fieldset>
+           <legend>Colors</legend>
+           <ul id="fromlist" class="ulist">
+	      <li id="fromlist_red">Red</li>
+              <li id="fromlist_green">Green</li>
+              <li id="fromlist_blue">Blue</li>
+              <li id="fromlist_yellow">Yellow</li>
+              <li id="fromlist_magenta">Magenta</li>
+           </ul>
+        </fieldset>
+      </div>
+
+      <div class="Demo">
+      <p>... and place them below.</p>
+	<fieldset>
+           <legend>Colors you like</legend>
+           <ul id="tolist" class="ulist"></ul>
+        </fieldset>
+
+      @@INCLUDE@@ ../web_elements/javascripts/aws_sortable.tjs fromlist tolist
+      </div>
+
+      <br>
+      <div class="Button">
+      <p>
+      <input id="xml5" type="button" name="action1" value="Make sortable">
+      <input id="xml6" type="button" name="action2" value="Remove sortable">
+      <input id="xml_get_list" type="button" name="action3" value="Check result">
+     
+      @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml5)
+      @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml6)
+      @@INCLUDE@@ ../web_elements/javascripts/aws_action_xml.tjs (onclick, xml_get_list, 4=>tolist)
+      </div>
+
+      <div class="Result" id="list_result">... result here ...</div>
+
+      <br><br>
+      <div Class="Status" id="xml2_status_bar">Click on the buttons</div>
+
+      </div>
+
       </td>
+
       </table>
    </body>
 </html>
