* templates2ada.adb, templates.tads:   Add support for AWS/AJAX event/actions. A new package named Ajax is    now generated containing every Ajax actions found on template    files. This help keeping the Ada part and the Ajax (Javascript)    synchronized. Update the Ajax demo to the new Ajax HTTP request naming. Work for FB10-026.

--- a/demos/we_test_ajax.html
+++ b/demos/we_test_ajax.html
@@ -276,11 +276,11 @@ html>div, #page7         { height: 27em; }
 <script>
    function list_group()
    {
-      @@INCLUDE@@ ../web_elements/javascripts/aws_func_replace.tjs (g_list, group_list)
+      @@INCLUDE@@ ../web_elements/javascripts/aws_func_replace.tjs (null, g_list, group_list)
    }
    function list_user()
    {
-      @@INCLUDE@@ ../web_elements/javascripts/aws_func_replace.tjs (u_list, user_list)
+      @@INCLUDE@@ ../web_elements/javascripts/aws_func_replace.tjs (null, u_list, user_list)
    }
 </script>
       <div id="action" class="CResult"></div>
